include/constantine/curves/bn254_snarks.h

typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(254)]; } bn254_snarks_fr;
typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(254)]; } bn254_snarks_fp;
typedef struct { bn254_snarks_fp c[2]; } bn254_snarks_fp2;
typedef struct { bn254_snarks_fp x, y; } bn254_snarks_g1_aff;
typedef struct { bn254_snarks_fp x, y, z; } bn254_snarks_g1_jac;
typedef struct { bn254_snarks_fp x, y, z; } bn254_snarks_g1_prj;
typedef struct { bn254_snarks_fp2 x, y; } bn254_snarks_g2_aff;
typedef struct { bn254_snarks_fp2 x, y, z; } bn254_snarks_g2_jac;
typedef struct { bn254_snarks_fp2 x, y, z; } bn254_snarks_g2_prj;
void        ctt_bn254_snarks_g2_prj_scalar_mul_big_coef_vartime(bn254_snarks_g2_prj* P, const big254* scalar);
void        ctt_bn254_snarks_g2_prj_scalar_mul_fr_coef_vartime(bn254_snarks_g2_prj* P, const bn254_snarks_fr* scalar);
void        ctt_bn254_snarks_g2_prj_multi_scalar_mul_big_coefs_vartime(bn254_snarks_g2_prj* r, const big254 coefs[], const bn254_snarks_g2_aff points[], size_t len);
void        ctt_bn254_snarks_g2_prj_multi_scalar_mul_fr_coefs_vartime(bn254_snarks_g2_prj* r, const bn254_snarks_fr coefs[], const bn254_snarks_g2_aff points[], size_t len);