constantine-rust/constantine-sys/src/bindings32.rs

extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_scalar_mul_big_coef_vartime(
        P: *mut bn254_snarks_g2_prj,
        scalar: *const big254,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_scalar_mul_fr_coef_vartime(
        P: *mut bn254_snarks_g2_prj,
        scalar: *const bn254_snarks_fr,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_multi_scalar_mul_big_coefs_vartime(
        r: *mut bn254_snarks_g2_prj,
        coefs: *const big254,
        points: *const bn254_snarks_g2_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bn254_snarks_g2_prj,
        coefs: *const bn254_snarks_fr,
        points: *const bn254_snarks_g2_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_aff_svdw_sha256(
        r: *mut bn254_snarks_g1_aff,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_svdw_sha256(
        r: *mut bn254_snarks_g1_jac,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_svdw_sha256(
        r: *mut bn254_snarks_g1_prj,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_svdw_sha256(
        r: *mut bn254_snarks_g2_aff,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_svdw_sha256(
        r: *mut bn254_snarks_g2_jac,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_svdw_sha256(
        r: *mut bn254_snarks_g2_prj,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pallas_fr {
    limbs: [secret_word; 8usize],
}
#[test]
fn bindgen_test_layout_pallas_fr() {
    const UNINIT: ::core::mem::MaybeUninit<pallas_fr> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<pallas_fr>(),
        32usize,
        concat!("Size of: ", stringify!(pallas_fr))
    );
    assert_eq!(
        ::core::mem::align_of::<pallas_fr>(),
        4usize,
        concat!("Alignment of ", stringify!(pallas_fr))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).limbs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pallas_fr),
            "::",
            stringify!(limbs)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pallas_fp {
    limbs: [secret_word; 8usize],
}
#[test]
fn bindgen_test_layout_pallas_fp() {
    const UNINIT: ::core::mem::MaybeUninit<pallas_fp> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<pallas_fp>(),
        32usize,
        concat!("Size of: ", stringify!(pallas_fp))
    );
    assert_eq!(
        ::core::mem::align_of::<pallas_fp>(),
        4usize,
        concat!("Alignment of ", stringify!(pallas_fp))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).limbs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pallas_fp),
            "::",
            stringify!(limbs)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pallas_ec_aff {
    x: pallas_fp,
    y: pallas_fp,
}
#[test]
fn bindgen_test_layout_pallas_ec_aff() {
    const UNINIT: ::core::mem::MaybeUninit<pallas_ec_aff> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<pallas_ec_aff>(),
        64usize,
        concat!("Size of: ", stringify!(pallas_ec_aff))
    );
    assert_eq!(
        ::core::mem::align_of::<pallas_ec_aff>(),
        4usize,
        concat!("Alignment of ", stringify!(pallas_ec_aff))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pallas_ec_aff),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(pallas_ec_aff),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pallas_ec_jac {
    x: pallas_fp,
    y: pallas_fp,
    z: pallas_fp,
}
#[test]
fn bindgen_test_layout_pallas_ec_jac() {
    const UNINIT: ::core::mem::MaybeUninit<pallas_ec_jac> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<pallas_ec_jac>(),
        96usize,
        concat!("Size of: ", stringify!(pallas_ec_jac))
    );
    assert_eq!(
        ::core::mem::align_of::<pallas_ec_jac>(),
        4usize,
        concat!("Alignment of ", stringify!(pallas_ec_jac))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pallas_ec_jac),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(pallas_ec_jac),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(pallas_ec_jac),
            "::",
            stringify!(z)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pallas_ec_prj {
    x: pallas_fp,
    y: pallas_fp,
    z: pallas_fp,
}
#[test]
fn bindgen_test_layout_pallas_ec_prj() {
    const UNINIT: ::core::mem::MaybeUninit<pallas_ec_prj> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<pallas_ec_prj>(),
        96usize,
        concat!("Size of: ", stringify!(pallas_ec_prj))
    );
    assert_eq!(
        ::core::mem::align_of::<pallas_ec_prj>(),
        4usize,
        concat!("Alignment of ", stringify!(pallas_ec_prj))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pallas_ec_prj),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(pallas_ec_prj),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(pallas_ec_prj),
            "::",
            stringify!(z)
        )
    );
}
extern "C" {
    pub fn ctt_big255_from_pallas_fr(dst: *mut big255, src: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_from_big255(dst: *mut pallas_fr, src: *const big255);
}
extern "C" {
    #[must_use]
    pub fn ctt_pallas_fr_unmarshalBE(dst: *mut pallas_fr, src: *const byte, src_len: usize)
        -> bool;
}
extern "C" {
    #[must_use]
    pub fn ctt_pallas_fr_marshalBE(dst: *mut byte, dst_len: usize, src: *const pallas_fr) -> bool;
}
extern "C" {
    pub fn ctt_pallas_fr_is_eq(a: *const pallas_fr, b: *const pallas_fr) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fr_is_zero(a: *const pallas_fr) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fr_is_one(a: *const pallas_fr) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fr_is_minus_one(a: *const pallas_fr) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fr_set_zero(a: *mut pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_set_one(a: *mut pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_set_minus_one(a: *mut pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_neg(r: *mut pallas_fr, a: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_neg_in_place(a: *mut pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_sum(r: *mut pallas_fr, a: *const pallas_fr, b: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_add_in_place(a: *mut pallas_fr, b: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_diff(r: *mut pallas_fr, a: *const pallas_fr, b: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_sub_in_place(a: *mut pallas_fr, b: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_double(r: *mut pallas_fr, a: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_double_in_place(a: *mut pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_prod(r: *mut pallas_fr, a: *const pallas_fr, b: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_mul_in_place(a: *mut pallas_fr, b: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_square(r: *mut pallas_fr, a: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_square_in_place(a: *mut pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_div2(a: *mut pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_inv(r: *mut pallas_fr, a: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_inv_in_place(a: *mut pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_fr_ccopy(a: *mut pallas_fr, b: *const pallas_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fr_cswap(a: *mut pallas_fr, b: *mut pallas_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fr_cset_zero(a: *mut pallas_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fr_cset_one(a: *mut pallas_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fr_cneg_in_place(a: *mut pallas_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fr_cadd_in_place(a: *mut pallas_fr, b: *const pallas_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fr_csub_in_place(a: *mut pallas_fr, b: *const pallas_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_big255_from_pallas_fp(dst: *mut big255, src: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_from_big255(dst: *mut pallas_fp, src: *const big255);
}
extern "C" {
    #[must_use]
    pub fn ctt_pallas_fp_unmarshalBE(dst: *mut pallas_fp, src: *const byte, src_len: usize)
        -> bool;
}
extern "C" {
    #[must_use]
    pub fn ctt_pallas_fp_marshalBE(dst: *mut byte, dst_len: usize, src: *const pallas_fp) -> bool;
}
extern "C" {
    pub fn ctt_pallas_fp_is_eq(a: *const pallas_fp, b: *const pallas_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fp_is_zero(a: *const pallas_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fp_is_one(a: *const pallas_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fp_is_minus_one(a: *const pallas_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fp_set_zero(a: *mut pallas_fp);
}
